Rearranged widgets in main_window to avoid having two scrollbars in parallel

--- a/projects.css
+++ b/projects.css
@@ -3,7 +3,6 @@ Screen {
     align: center middle;
 }
 
-
 #list {
     layer: below;
     width: 100%;
@@ -15,12 +14,9 @@ Screen {
     align: center middle;
     width: 100%;
     height: 100%;
-    margin-bottom: 1;
-    /*border: outer $primary-darken-1;*/
 }
 
 #expand {
-    /*align: center middle;*/
     width: 100%;
     height: auto;
 }
@@ -29,7 +25,7 @@ Screen {
     layer:below;
     dock: bottom;
     width: 100%;
-    height: 4;
+    height: 3;
 }
 
 #test {
